# crypto-bot

./: .gitignore  CMakeLists.txt  CmakePresets.json  README.md
include/: main.h
include/bot/: bot_service.h
include/cryptocurrencies/: analyzer.h  coins.h  wallet.h
include/services/base/: postgres.h
include/services/cache/: redis.h
include/utils/: forCurl.h  parseJSON.h
src/: main.cpp
src/bot/: bot_service.cpp
src/cryptocurrencies/: analyzer.cpp  coins.cpp  wallet.cpp
src/services/base/: postgres.cpp
src/services/cache/: redis.cpp
src/utils/: forCurl.cpp  parseJSON.cpp
